--- a/config/demo_params.yaml
+++ b/config/demo_params.yaml
@@ -6,8 +6,8 @@ mqtt:
     port: 1883
     keepalive: 60
   private_path: device/001
-#serializer: json:dumps
-#deserializer: json:loads
+serializer: json:dumps
+deserializer: json:loads
 bridge:
   # ping pong
   - factory: mqtt_bridge.bridge:RosToMqttBridge
@@ -36,3 +36,8 @@ bridge:
     msg_type: std_msgs.msg:String
     topic_from: ~/echo
     topic_to: /private/back
+  # VDA5050 Order
+  - factory: mqtt_bridge.bridge:MqttToRosBridge
+    msg_type: vda5050_msgs.msg:Order
+    topic_from: Neobotix/LTC/MMO_500/order
+    topic_to: /VDA5050_Test
