--- a/config/demo_params.yaml
+++ b/config/demo_params.yaml
@@ -8,8 +8,8 @@ mqtt_bridge_node:
         port: 1883
         keepalive: 60
       private_path: "device/001"
-    serializer: json:dumps
-    deserializer: json:loads
+    serializer: vda5050_serializer:dumps    #json:dumps
+    deserializer: vda5050_serializer:loads     #json:loads
     n_bridges: 7
     bridge:
       bridge1: ["mqtt_bridge.bridge:RosToMqttBridge","std_msgs.msg:Bool","/ping","ping"]
