add bridge RosToMqtt for State

--- a/config/demo_params.yaml
+++ b/config/demo_params.yaml
@@ -10,7 +10,7 @@ mqtt_bridge_node:
       private_path: "device/001"
     serializer: vda5050_serializer:dumps    #json:dumps
     deserializer: vda5050_serializer:loads     #json:loads
-    n_bridges: 7
+    n_bridges: 8
     bridge:
       bridge1: ["mqtt_bridge.bridge:RosToMqttBridge","std_msgs.msg:Bool","/ping","ping"]
       bridge2: ["mqtt_bridge.bridge:MqttToRosBridge","std_msgs.msg:Bool","ping","/pong"]
@@ -18,5 +18,5 @@ mqtt_bridge_node:
       bridge4: ["mqtt_bridge.bridge:MqttToRosBridge","std_msgs.msg:String","echo","/back"]
       bridge5: ["mqtt_bridge.bridge:RosToMqttBridge","std_msgs.msg:String","/private/echo","~/echo"]
       bridge6: ["mqtt_bridge.bridge:MqttToRosBridge","std_msgs.msg:String","~/echo", "/private/back"]
-      bridge7: ["mqtt_bridge.bridge:MqttToRosBridge","vda5050_msgs.msg:Order","Neobotix/LTC/MMO_500/order", "/VDA5050_Test"]
-      #TODO: add RosToMqtt for communication in other dircetion
+      bridge7: ["mqtt_bridge.bridge:MqttToRosBridge","vda5050_msgs.msg:Order","Neobotix/LTC/MMO_500/order", "/VDA5050_Order"]
+      bridge8: ["mqtt_bridge.bridge:RosToMqttBridge","vda5050_msgs.msg:State","/VDA5050_State", "Neobotix/LTC/MMO_500/state"]
