--- a/config/demo_params.yaml
+++ b/config/demo_params.yaml
@@ -4,7 +4,7 @@ mqtt_bridge_node:
       client:
         protocol: 4      # MQTTv311
       connection:
-        host: "localhost"
+        host: "192.168.0.104"
         port: 1883
         keepalive: 60
       private_path: "device/001"
